# make-mfe-seo-great-again

./: Cargo.toml  README.md
src/: go.mod  main.go  main.rs
src/routes/: productsHandler.go  searchHandler.go
src/utils/: utils.go
